feat: 文章列表加载、Freemarker
1、集合遍历：<#list as>
2、索引：_index
3、内建函数：?keys、?date、?time、?datetime、?string、?c

--- a/backup/nginx/leadnews.conf/heima-leadnews-app.conf
+++ b/backup/nginx/leadnews.conf/heima-leadnews-app.conf
@@ -1,17 +1,16 @@
 upstream leadnews {
     server 192.168.56.17:80;
 }
+
 upstream heima-app-gateway{
     server 192.168.56.102:51601;
 }
 
+
 server {
 	listen 80;
-	server_name www.leadnews.cn;
-	
 	location / {
-		proxy_pass http://leadnews;
-		alias /usr/share/nginx/html/;
+		root /usr/share/nginx/html/;
 		index index.html;
 	}
 	
