--- a/backup/nginx/nginx.conf
+++ b/backup/nginx/nginx.conf
@@ -1,35 +1,15 @@
 
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
+#user  nobody;
+worker_processes  1;
 
 events {
     worker_connections  1024;
 }
-
-
 http {
-    include       /etc/nginx/mime.types;
+    include       mime.types;
     default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
     sendfile        on;
-    #tcp_nopush     on;
-
     keepalive_timeout  65;
-
-    #gzip  on;
-
-    include /etc/nginx/conf.d/*.conf;
-    
-    # 引入自定义配置文件
-    include leadnews.conf/*.conf;
+	# 引入自定义配置文件
+	include leadnews.conf/*.conf;
 }
