feat: 自媒体文章审核
1、Freemarker合成模板文件：Configuration#getTemplate#process
2、Mybatis泛型语法：Wrappers.<ApArticle>lambdaUpdate()
3、异步调用：@EnableAsync、@Async
4、内容安全：TextScanRequest、ImageSyncScanRequest
5、OCR：Tess4j、Tesseract#doOCR
6、DFS(Deterministic Finite State, 确定有穷状态机)

--- a/heima-leadnews/heima-leadnews-common/pom.xml
+++ b/heima-leadnews/heima-leadnews-common/pom.xml
@@ -143,5 +143,12 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
+
+        <!-- tess4j OCR -->
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>4.1.1</version>
+        </dependency>
     </dependencies>
 </project>
