feat: 异步通知文章上下架
1、生产者：KafkaProducer#send、KafkaTemplate#send
2、消费者：KafkaConsumer#subscribe、@KafkaListener

--- a/heima-leadnews/heima-leadnews-test/pom.xml
+++ b/heima-leadnews/heima-leadnews-test/pom.xml
@@ -16,6 +16,7 @@
         <module>minio-demo</module>
         <module>tess4j-demo</module>
         <module>delayed-demo</module>
+        <module>kafka-demo</module>
     </modules>
 
     <properties>
