--- a/heima-leadnews/heima-leadnews-test/xxljob-demo/pom.xml
+++ b/heima-leadnews/heima-leadnews-test/xxljob-demo/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>heima-leadnews-service</artifactId>
+        <artifactId>heima-leadnews-test</artifactId>
         <groupId>com.heima</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>heima-leadnews-article</artifactId>
+    <artifactId>xxljob-demo</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -17,17 +17,9 @@
     </properties>
 
     <dependencies>
-        <!-- freemarker -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-freemarker</artifactId>
-        </dependency>
-
-        <!-- MinIO -->
-        <dependency>
-            <groupId>com.heima</groupId>
-            <artifactId>heima-file-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <!--xxl-job-->
